samples/_failures_safe/1761476383_a4bb71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5547ee4.c: In function ‘main’:
./samples/SAFE/__tmp_d5547ee4.c:161:29: error: missing terminating " character
  161 |             fprintf(stderr, "Error: Invalid
      |                             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5547ee4.c:161:13: error: expected expression at end of input
  161 |             fprintf(stderr, "Error: Invalid
      |             ^~~~~~~
./samples/SAFE/__tmp_d5547ee4.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5547ee4.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5547ee4.c:161:13: error: expected declaration or statement at end of input
